--- a/insect_politicks.html
+++ b/insect_politicks.html
@@ -1,46 +1,175 @@
 <!DOCTYPE html>
 <html>
-<h> ***INSECT POLITICKS*** </h>
-
-<body>
+<body> 
+<h1> ***INSECT POLITICKS*** </h1>
+you are now all bow down to us
 
 <p> <b> 050322 </b> Willy Max Ryle
 <br>
-<a href="C:\Users\bnadu\Documents\muzic\050322\Ever Fallen in Love.mp3"
-target="_blank">Ever fallen in love</a>
+<a href="Ever Fallen in Love.mp3" target="_blank">Ever fallen in love</a>
 <br>
-<a href="C:\Users\bnadu\Documents\muzic\050322\htdf.mp3" 
+<a href="htdf.mp3" 
 target="_blank">forgot what its called but its a classic lol</a>
 <br>
-<a href="C:\Users\bnadu\Documents\muzic\050322\thingy.mp3"
+<a href="thingy.mp3"
 target="_blank">Creep</a>
 </p>
+
+<p> <b> 042922 </b> Max Oly Lucy Willy
+<br>
+<a href="1. welcome.... (Crebs07's new pedal).mp3"
+target="_blank">1. welcome.... (Crebs07's new pedal) </a>
+<br>
+<a href="2. .mp3"
+target="_blank">2. </a>
+<br>
+<a href="3. hell experiment.mp3"
+target="_blank">3.hell experiment</a>
+<br>
+<a href="5. First version of the next one .mp3"
+target="_blank">4. First version of the next one</a>
+<br>
+<a href="6. coooooool.mp3"
+target="_blank">5. coooooool</a>
+<br>
+<a href="C:\Users\bnadu\Documents\muzic\042922\6.5 micro song.mp3"
+target="_blank">6. micro song </a>
+<br>
+<a href="7. dog go to... hell__ its okay they like it there.mp3"
+target="_blank">7. dogs go to.... hell??? its okay they like it there</a>
+<br>
+<a href="8. park life.mp3"
+target="_blank">8. park life</a>
+<br>
+<a href="9. UAPog.mp3"
+target="_blank">9. UAPog</a>
+<br>
+<a href="10..mp3"
+target="_blank">10. </a>
+<br>
+<a href="11. Waltz (first one).mp3"
+target="_blank">11. Waltz (first one) </a>
+<br>
+<a href="12. waltz jam.mp3"
+target="_blank">12. waltz jam </a>
+<br>
+<a href="13..mp3"
+target="_blank">13. </a>
+<br>
+<a href="14. idk this.mp3"
+target="_blank">14. idk this</a>
+<br>
+<a href="15. nice 1 always.mp3"
+target="_blank">15. nice 1 always</a>
+<br>
+<a href="16..mp3"
+target="_blank">16.</a>
+<br>
+<a href="17. 13 with more words.mp3"
+target="_blank">17. 13 with more words </a>
+<br>
+<a href="18. last 13.mp3"
+target="_blank">18. last 13</a>
+<br>
+<a href="19. Elanor Rigby with attrocious drums.mp3"
+target="_blank">19. Elanor Rigby with attrocious drums</a>
+<br>
+<a href="20. USSfuck.mp3"
+target="_blank">20. USSfuck</a>
+<br>
+<a href="21. twist and shout.mp3"
+target="_blank">21. Twist and SHOUT</a>
+<br>
+<a href="22. Hey jude.mp3"
+target="_blank">22. Hey jude</a>
+<br>
+<a href="23. let it b.mp3"
+target="_blank">23. let it b</a>
+<br>
+<a href="24. 11.mp3"
+target="_blank">24.11</a>
+
 
 
 <p> <b> 042522 </b> Lucy F. Oly Ryle Willy
 <br>
-<a href="file:///C:/Users/bnadu/Documents/friend.music.html/1.%20Strange.mp3" 
+<a href="1.%20Strange.mp3" 
 target="_blank">1. Strange</a>
 <br>
-<a href="C:\Users\bnadu\Documents\muzic\042522\2. Gargar Truck.mp3"
+<a href="2. Gargar Truck.mp3"
 target="_blank">2. Gargar Truck</a>
 <br>
-<a href="C:\Users\bnadu\Documents\muzic\042522\3. Tonight tonight.mp3"
+<a href="3. Tonight tonight.mp3"
 target="_blank">3. Tonight tonight</a>
 <br>
-<a href="C:\Users\bnadu\Documents\muzic\042522\4. Love Story.mp3"
+<a href="4. Love Story.mp3"
 target="_blank">4. Love Story</a>
 <br>
-<a href="C:\Users\bnadu\Documents\muzic\042522\5. A Bunch of Stuff.mp3"
+<a href="5. A Bunch of Stuff.mp3"
 target="_blank">5. A Bunch of Stuff</a>
 <br>
-<a href="C:\Users\bnadu\Documents\muzic\042522\6. Viva fuck.mp3"
+<a href="6. Viva fuck.mp3"
 target="_blank">6. Viva fuck</a>
 <br>
-<a href="C:\Users\bnadu\Documents\muzic\042522\7. Viva la vida.mp3"
+<a href="7. Viva la vida.mp3"
 target="_blank">7. Viva la vida</a>
+<br>
+<a href="042522 breaking paradise (jesse pov).mp3"
+target="_blank">8. Breaking Paradise (Jesse Pinkman POV)</a>
+<br>
+<a href="042522 since you've been breaking bad (walter pov).mp3"
+target="_blank">9. Since You've Been Breaking Bad (basty boo intro)</a>
+<br>
+!!!<b>instrument switch</b>!!!
+<br>
+<a href="Basty Boo + its aw ova baby bwue.mp3"
+target="_blank">10. Basty Boo + its aw ova baby bwue</a>
+<br>
+<a href="Happy Hill.mp3"
+target="_blank">11. Happy Hill</a>
+<br>
+<a href="Kreen.mp3"
+target="_blank">12, Kreen</a>
+<br>
+<a href="Qream.mp3"
+target="_blank">13. Qream</a>
+<br>
+<a href="baby blue 2.mp3"
+target="_blank">14. baby blue 2 </a>
+<br>
+<a href="the end.mp3"
+target="_blank">15.  the end </a>
 </p>
 
+<p> <b> 040822 </b> Max Oly Lucy Willy
+<br>
+<a href="foreshadowing.mp3"
+target="_blank">foreshadowing</a>
+<br>
+<a href="i love these white kids (eminem).mp3"
+target="_blank">i love these white kids (eminem)</a>
+<br>
+<a href="shoop.mp3"
+target="_blank">shoop</a>
+<br>
+<a href="040822-mama-mia-_first-one-with-the-improv_.mp3"
+target="_blank">mama mia</a>
+<br>
+<a href="040822 LOTS of ppl making noise.mp3"
+target="_blank">(xtra) group noise</a>
+</p>
+
+<p> <b> 032622 </b> Willy Ryle Oly
+<br>
+<a href="welcome enjoyr ur stay.mp3"
+target="_blank">welcome enjoyr ur stay</a>
+<br>
+<a href="the koogs, mickey mouse, metdog.mp3"
+target="_blank">the koogs, mickey mouse, metdog</a>
+<br>
+<a href="the end.mp3"
+target="_blank">the end >:)</a>
+</p>
 
 </body>
 
