--- a/walking_to_the_grocery_store.html
+++ b/walking_to_the_grocery_store.html
@@ -1,8 +1,45 @@
 <!DOCTYPE html>
 <html>
 
-<center> <img src="Walking to the Grocery Store.png"> <center>
 <h1> WALKING TO THE GROCERY STORE </h1>
 <p> uhhh uuhhhhh nothing here yet </p>
+
+
+
+<br>
+<a href="1. thing.mp3"
+target="_blank">1. thing</a>
+<br>
+<a href="2.mp3"
+target="_blank">2.</a>
+<br>
+<a href="3.mp3"
+target="_blank">3.</a>
+<br>
+<a href="4.mp3"
+target="_blank">4.</a>
+<br>
+<a href="5. Bass + guitar 4 year old.mp3"
+target="_blank">5. Bass + guitar 4 year old</a>
+<br>
+<a href="6. pls vote for me.mp3"
+target="_blank">6. pls vote for me</a>
+<br>
+<a href="7. VOTE FOR ME.mp3"
+target="_blank">7. VOTE FOR ME</a>
+</br>
+
+
+
+<body topmargin="20" leftmargin="50" rightmargin="870"> 
+<img align="right" src="Walking to the Grocery Store.png"> 
+
+
+
+</body>
+
+
+
+
 
 <html>
