--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -9,61 +9,61 @@
 
 <p> <b> 051322 </b> En Ryle, Station St 
 <br>
-<a href="1 ER.mp3"
+<a href="/muzic/051322/1_ER.mp3"
 target="_blank">1. %!@!)*&</a>
 <br>
-<a href="2 ER.mp3"
+<a href="/muzic/051322/2_ER.mp3"
 target="_blank">:)</a>
 <br>
-<a href="3 ER.mp3"
+<a href="/muzic/051322/3_ER.mp3"
 target="_blank"> >:)</a>
 <br>
-<a href="4 ER.mp3"
+<a href="/muzic/051322/4_ER.mp3"
 target="_blank">;P</a>
 <br>
-<a href="5 ER.mp3"
+<a href="/muzic/051322/5_ER.mp3"
 target="_blank">:E</a>
 <br>
-<a href="6 ER.mp3"
+<a href="/muzic/051322/6_ER.mp3"
 target="_blank">:0</a>
 <br>
-<a href="7 ER.mp3"
+<a href="/muzic/051322/7_ER.mp3"
 target="_blank">:V!!!</a>
 <br>
-<a href="8 ER.mp3"
+<a href="/muzic/051322/8_ER.mp3"
 target="_blank">?!?!?</a>
 <br>
-<a href="9 ER.mp3"
+<a href="/muzic/051322/9_ER.mp3"
 target="_blank">the end... for now</a>
 </p>
 
 <p> <b> 051322 </b> Ryle En (reversed) Station St
 <br>
-<a href="1. Start.mp3"
+<a href="/muzic/051322/switched/1._Start.mp3"
 target="_blank">oh shit</a>
 <br>
-<a href="2-2.mp3"
+<a href="/muzic/051322/switched/2-2.mp3"
 target="_blank">_>_>_>_></a>
 <br>
-<a href="3-2.mp3"
+<a href="/muzic/051322/switched/3-2.mp3"
 target="_blank">:0?!??:p :)))</a>
 <br>
-<a href="4-2.mp3"
+<a href="/muzic/051322/switched/4-2.mp3"
 target="_blank">pog</a>
 <br>
-<a href="5-2.mp3"
+<a href="/muzic/051322/switched/5-2.mp3"
 target="_blank">666</a>
 <br>
-<a href="6-2.mp3"
+<a href="/muzic/051322/switched/6-2.mp3"
 target="_blank"> short </a>
 <br>
-<a href="7. conversation.mp3""
+<a href="/muzic/051322/switched/7._conversation.mp3"
 target="_blank">conversation</a>
 <br>
-<a href="8-2.mp3"
+<a href="/muzic/051322/switched/8-2.mp3"
 target="_blank">uhhh yeaaah</a>
 <br>
-<a href="9-2.mp3"
+<a href="/muzic/051322/switched/9-2.mp3"
 target="_blank">same as previous, this one is way cooler and better tho</a>
 </p>
 
