--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -9,7 +9,7 @@
 
 <p> <b> 051322 </b> En Ryle, Station St 
 <br>
-<a href="carrotpix/friend.music/muzic/051322/1_ER.mp3?raw=true"
+<a href="http://carrotpix/friend.music/muzic/051322/1_ER.mp3?raw=true"
 target="_blank">1. %!@!)*&</a>
 <br>
 <a href="/muzic/051322/2_ER.mp3"
