--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -6,6 +6,13 @@
 <h1> MISC. </h1>
 <p> no band just sesh. improvs. tracks are in jam order. </p>
 <hr>
+  
+  <br>
+   <audio controls>
+  <source src="carrotpix/friend.music/muzic/051322/1_ER.mp3" type="audio/ogg">
+  <source src="carrotpix/friend.music/muzic/051322/1_ER.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>  <br>
 
 <p> <b> 051322 </b> En Ryle, Station St 
 <br>
