--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -9,7 +9,7 @@
   
   <br>
    <audio controls>
-  <source src="/carrotpix/friend.music/muzic/051322/1_ER.mp3" type="audio/ogg">
+  <source src="/carrotpix/friend.music/muzic/051322/1_ER.ogg" type="audio/ogg">
   <source src="/carrotpix/friend.music/muzic/051322/1_ER.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>  <br>
